--- a/style.css
+++ b/style.css
@@ -1,31 +1,32 @@
 body {
   display: flex;
   justify-content: center;
+  background-color: #25383c;
 }
 .container {
-  background-color: #d7816a;
-  border: black solid 2px;
-  width: 800px;
-  height: 900px;
+  height: 100vh;
+  width: 1000px;
+
   border-radius: 5px;
   padding-top: 30px;
 }
 h1,
 p,
 h2 {
-  font-family: "Abel", sans-serif;
-  font-size: 25px;
+  font-family: "Miltonian Tattoo", cursive;
+  font-size: 40px;
   text-align: center;
   padding-top: 30px;
+  color: #8d918d;
 }
 .number {
-  font-family: "Abel", sans-serif;
+  font-family: "Miltonian Tattoo", cursive;
   font-size: 25px;
   text-align: center;
   margin: 20px;
 }
 h1 {
-  font-size: 50px;
+  font-size: 70px;
 }
 .btn,
 .check,
@@ -36,12 +37,20 @@ h1 {
 .btn,
 .guess,
 .check {
-  border-radius: 40px;
-  border: black dashed 2px;
+  border-left: #5e7d7e solid 4px;
+  border-right: #5e7d7e solid 4px;
+
+  border-top: none;
+  border-bottom: none;
   padding: 20px;
-  background-color: white;
+  background-color: #5e7d7e;
 }
 
 .check {
   padding: 10px;
+}
+.img {
+  height: 200px;
+  position: relative;
+  top: 35rem;
 }
