--- a/style.css
+++ b/style.css
@@ -1,56 +1,276 @@
 body {
-  display: flex;
-  justify-content: center;
-  background-color: #25383c;
+	display: flex;
+	justify-content: center;
+	background-color: #ffff;
+	background: #ffc0cb;
 }
-.container {
-  height: 100vh;
-  width: 1000px;
+* {
+	font-family: "Overpass", sans-serif;
+}
 
-  border-radius: 5px;
-  padding-top: 30px;
+h1 {
+	font-size: 50px;
+	color: #ff00bf;
 }
-h1,
-p,
-h2 {
-  font-family: "Miltonian Tattoo", cursive;
-  font-size: 40px;
-  text-align: center;
-  padding-top: 30px;
-  color: #8d918d;
+
+.box__main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+p {
+	text-align: center;
+	font-size: 20px;
+	padding-top: 30px;
+	color: #ff00bf;
+	font-weight: 800;
 }
 .number {
-  font-family: "Miltonian Tattoo", cursive;
-  font-size: 25px;
-  text-align: center;
-  margin: 20px;
+	font-size: 25px;
+	text-align: center;
+	margin: 20px;
+	color: #ff00bf;
+	font-weight: 800;
 }
-h1 {
-  font-size: 70px;
+input {
+	width: 12rem;
+	height: 2rem;
+	font-size: 20px;
+	text-align: center;
+	font-weight: 800;
+	color: #ff00bf;
+	border-bottom: 4px solid #ff00bf;
+	margin-bottom: 2rem;
+	border-right: none;
+	border-left: none;
+	border-top: none;
+	background-color: #ffff;
 }
-.btn,
+input::placeholder {
+	color: #ff00bf;
+	font-size: 15px;
+}
 .check,
-.guess {
-  position: relative;
-  left: 40%;
+.btn {
+	width: 13rem;
+	color: #ff00bf;
+	padding: 0.6rem 0.2rem 0.6rem 0.2rem;
+	background-color: #ffff;
+	font-size: 20px;
+	letter-spacing: 0.06em;
+	border-radius: 0.6em;
+	border: 8px solid #ff00bf;
+	font-weight: 800;
 }
-.btn,
-.guess,
-.check {
-  border-left: #5e7d7e solid 4px;
-  border-right: #5e7d7e solid 4px;
+.btn:hover {
+	background-color: #f3d9ec;
+}
+.check:hover {
+	background-color: #f3d9ec;
+}
+.container__number--left {
+	position: relative;
+	right: 23rem;
+	top: 70px;
+	margin: 0;
+	padding: 0;
+}
+.container__number--right {
+	width: 400px;
+	height: 700px;
+	position: relative;
+	left: 30rem;
+	bottom: 40rem;
+	margin-right: 6rem;
+}
+.number--eight {
+	position: relative;
+	right: 3rem;
+	bottom: 9rem;
+	color: #ffff;
+	font-size: 5rem;
+	transform: translate(30px, 20px) rotate(40deg);
+	-webkit-text-stroke: 1px rgb(205, 69, 212);
+}
+.number--three {
+	position: relative;
+	right: 9rem;
+	font-size: 3rem;
+	bottom: 28rem;
+	-webkit-text-stroke: 1px #ffff;
+}
+.number--fourteen {
+	position: relative;
+	left: 6rem;
+	font-size: 6rem;
+	bottom: 17rem;
+}
+.number--eleven {
+	position: relative;
+	right: 3rem;
+	font-size: 5rem;
+	bottom: 38rem;
+	color: #ffff;
+}
+.number--seven {
+	position: relative;
+	right: 3rem;
+	font-size: 5rem;
+	bottom: 33rem;
+	transform: translate(40px, 20px) rotate(300deg);
+}
+.number--twenty {
+	position: relative;
+	left: 6rem;
+	bottom: 85rem;
+	font-size: 9rem;
+	color: #ffff;
+	-webkit-text-stroke: 1px rgb(205, 69, 212);
+}
+.number--one {
+	position: relative;
+	right: 10rem;
+	bottom: 30rem;
+	font-size: 2rem;
+	-webkit-text-stroke: 1px #ffff;
+}
+.number--five {
+	position: relative;
+	left: 10rem;
+	bottom: 50rem;
+	font-size: 2rem;
+	transform: translate(30px, 20px) rotate(10deg);
+}
+.number--sixteen {
+	position: relative;
+	right: 10rem;
+	bottom: 60rem;
+	font-size: 2rem;
+	color: #ffff;
+}
+.number--nine {
+	position: relative;
+	right: 1rem;
+	bottom: 60rem;
+	font-size: 5rem;
+	-webkit-text-stroke: 1px #ffff;
+	transform: translate(30px, 20px) rotate(50deg);
+}
+.number--two {
+	position: relative;
+	left: 19rem;
+	bottom: 9rem;
+	color: #ffff;
+	font-size: 5rem;
+	transform: translate(30px, 20px) rotate(70deg);
+	-webkit-text-stroke: 1px rgb(205, 69, 212);
+}
+.number--seventeen {
+	position: relative;
+	left: 5rem;
+	font-size: 6rem;
+	bottom: 17rem;
+}
+.number--twelve {
+	position: relative;
+	left: 13rem;
+	font-size: 3rem;
+	bottom: 28rem;
+	-webkit-text-stroke: 1px #ffff;
+}
+.number--nineteen {
+	position: relative;
+	left: 26rem;
+	bottom: 30rem;
+	font-size: 2rem;
+	-webkit-text-stroke: 1px #ffff;
+}
+.number--ten {
+	position: relative;
+	left: 6rem;
+	bottom: 50rem;
+	font-size: 2rem;
+	transform: translate(30px, 20px) rotate(10deg);
+}
+.number--four {
+	position: relative;
+	left: 18rem;
+	font-size: 5rem;
+	bottom: 38rem;
+	color: #ffff;
+}
+.number--threeteen {
+	position: relative;
+	left: 24rem;
+	bottom: 40rem;
+	font-size: 5rem;
+}
+.number--fiveteen {
+	position: relative;
+	left: 10rem;
+	bottom: 50rem;
+	font-size: 2rem;
+	transform: translate(30px, 20px) rotate(10deg);
+}
+.number--eighteen {
+	position: relative;
+	bottom: 60rem;
+	font-size: 2rem;
+}
+.number--six {
+	position: relative;
+	bottom: 80rem;
+	left: 10rem;
+	font-size: 9rem;
+	color: #ffff;
+	-webkit-text-stroke: 1px rgb(205, 69, 212);
+}
+/* .number--one {
+	position: relative;
+	left: 40rem;
+	top: 20rem;
+	font-size: 12rem;
+	color: #ffff;
+}
+.number--two {
+	position: relative;
+	right: 13rem;
+	font-size: 10rem;
+	color: #ffff;
+}
 
-  border-top: none;
-  border-bottom: none;
-  padding: 20px;
-  background-color: #5e7d7e;
+
+
+
+.number--ten {
+	position: relative;
+	left: 40rem;
+}
+.number--fourteen {
+	position: relative;
+	color: #ffff;
+	right: 6rem;
+	top: 3rem;
+	font-size: 4rem;
+	transform: translate(20px, 40px) rotate(80deg);
+} */
+.position__number {
+	animation-name: floating;
+	animation-duration: 3s;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-in-out;
+	margin-left: 30px;
+	margin-top: 5px;
 }
 
-.check {
-  padding: 10px;
-}
-.img {
-  height: 200px;
-  position: relative;
-  top: 35rem;
+@keyframes floating {
+	0% {
+		transform: translate(0, 0px);
+	}
+	50% {
+		transform: translate(0, 15px);
+	}
+	100% {
+		transform: translate(0, -0px);
+	}
 }
