--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ body {
 h1 {
 	font-size: 50px;
 	color: #ff00bf;
+	margin-right: 5rem;
 }
 
 .box__main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-right: 5rem;
 }
 p {
 	text-align: center;
