--- a/style.css
+++ b/style.css
@@ -13,13 +13,6 @@ h1 {
 	color: #ff00bf;
 	margin-right: 5rem;
 }
-
-.box__main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-right: 5rem;
-}
 p {
 	text-align: center;
 	font-size: 20px;
@@ -34,6 +27,7 @@ p {
 	color: #ff00bf;
 	font-weight: 800;
 }
+/* Input, Check,Btn */
 input {
 	width: 12rem;
 	height: 2rem;
@@ -70,6 +64,13 @@ input::placeholder {
 .check:hover {
 	background-color: #f3d9ec;
 }
+/* Box, Containers */
+.box__main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-right: 5rem;
+}
 .container__number--left {
 	position: relative;
 	right: 23rem;
@@ -85,6 +86,7 @@ input::placeholder {
 	bottom: 40rem;
 	margin-right: 6rem;
 }
+/* !ALL NUMBERS */
 .number--eight {
 	position: relative;
 	right: 3rem;
@@ -101,6 +103,7 @@ input::placeholder {
 	bottom: 28rem;
 	-webkit-text-stroke: 1px #ffff;
 }
+
 .number--fourteen {
 	position: relative;
 	left: 6rem;
@@ -121,6 +124,7 @@ input::placeholder {
 	bottom: 33rem;
 	transform: translate(40px, 20px) rotate(300deg);
 }
+
 .number--twenty {
 	position: relative;
 	left: 6rem;
@@ -227,35 +231,7 @@ input::placeholder {
 	color: #ffff;
 	-webkit-text-stroke: 1px rgb(205, 69, 212);
 }
-/* .number--one {
-	position: relative;
-	left: 40rem;
-	top: 20rem;
-	font-size: 12rem;
-	color: #ffff;
-}
-.number--two {
-	position: relative;
-	right: 13rem;
-	font-size: 10rem;
-	color: #ffff;
-}
-
-
-
-
-.number--ten {
-	position: relative;
-	left: 40rem;
-}
-.number--fourteen {
-	position: relative;
-	color: #ffff;
-	right: 6rem;
-	top: 3rem;
-	font-size: 4rem;
-	transform: translate(20px, 40px) rotate(80deg);
-} */
+/* Position number */
 .position__number {
 	animation-name: floating;
 	animation-duration: 3s;
